[package]
name = "rust-tags"
version = "0.2.0"
authors = ["Jason Longshore <tempremoved@dafdfa.com>"]
description = "An HTML templating library for Rust"
repository = "https://github.com/longshorej/rust-tags"
readme = "README.md"
keywords = ["html", "xml", "template", "templating"]
license = "Apache-2.0"

[dependencies]
