[package]
name = "rust-tags"
version = "0.3.1"
authors = ["Jason Longshore <tempremoved@dafdfa.com>"]
description = "An HTML templating library for Rust"
repository = "https://github.com/longshorej/rust-tags"
homepage = "https://github.com/longshorej/rust-tags"
readme = "README.md"
keywords = ["html", "xml", "template", "templating"]
license = "Apache-2.0"

[dependencies]
